--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title>Excursion</title>
 </head>
 <body>
-
+  <h1>Discover hidden places in the world around you</h1>
+  <br>
+  <a href='/index.html'>
+    Download Excursion (Coming soon!)
+</a>
 </body>
 </html>
